XQueryLexer: Implement XQuery 1.0 (A.2.1) [144] StringLiteral tokens.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -1,5 +1,6 @@
 xquery.files.filetype.description=XQuery Language Support
 xquery.settings.colors.number=Number
+xquery.settings.colors.string=String
 xquery.settings.project.default.version.label=Default XQuery version:
 xquery.settings.project.title=XQuery Project Settings
 xquery.version.description.0.9-ml=MarkLogic 3.2 Compatibility Dialect
