XQueryLexer: Implement XQuery 1.0 (A.2.1) [146] EscapeQuot tokens within [144] StringLiteral tokens.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -1,4 +1,5 @@
 xquery.files.filetype.description=XQuery Language Support
+xquery.settings.colors.escaped.character=Escaped Character
 xquery.settings.colors.number=Number
 xquery.settings.colors.string=String
 xquery.settings.project.default.version.label=Default XQuery version:
