Test and highlight bad/invalid characters from XQueryLexer.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -1,4 +1,5 @@
 xquery.files.filetype.description=XQuery Language Support
+xquery.settings.colors.bad.character=Invalid Character
 xquery.settings.colors.entity.reference=Entity Reference
 xquery.settings.colors.escaped.character=Escaped Character
 xquery.settings.colors.number=Number
