XQueryLexer: Implement XQuery 1.0 (A.2.1) [155] NCName tokens.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -2,6 +2,7 @@ xquery.files.filetype.description=XQuery Language Support
 xquery.settings.colors.bad.character=Invalid Character
 xquery.settings.colors.entity.reference=Entity Reference
 xquery.settings.colors.escaped.character=Escaped Character
+xquery.settings.colors.identifier=Identifier
 xquery.settings.colors.number=Number
 xquery.settings.colors.string=String
 xquery.settings.project.default.version.label=Default XQuery version:
