XQueryLexer: Implement XQuery 1.0 (A.2.1) [151] Comment tokens.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -1,5 +1,6 @@
 xquery.files.filetype.description=XQuery Language Support
 xquery.settings.colors.bad.character=Invalid Character
+xquery.settings.colors.comment=Comment
 xquery.settings.colors.entity.reference=Entity Reference
 xquery.settings.colors.escaped.character=Escaped Character
 xquery.settings.colors.identifier=Identifier
