Define an XQueryDialect class with the W3C XQuery 1.0-3.1 versions supported.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -8,6 +8,9 @@ xquery.settings.colors.number=Number
 xquery.settings.colors.string=String
 xquery.settings.project.default.version.label=Default XQuery version:
 xquery.settings.project.title=XQuery Project Settings
+xquery.variant.description.1.0/W3C=XQuery 1.0 (W3C Recommendation 23 January 2007)
+xquery.variant.description.3.0/W3C=XQuery 3.0 (W3C Recommendation 08 April 2014)
+xquery.variant.description.3.1/W3C=XQuery 3.1 (W3C Candidate Recommendation 17 December 2015)
 xquery.version.description.0.9-ml=MarkLogic 3.2 Compatibility XQuery Dialect
 xquery.version.description.1.0=W3C XQuery 1.0
 xquery.version.description.1.0-ml=MarkLogic XQuery Dialect
