Renamed XQueryVendor to XQueryImplementation.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -9,6 +9,8 @@ xquery.dialect.description.3.0/W3C=XQuery 3.0 (W3C Recommendation 08 April 2014)
 xquery.dialect.description.3.0+update/W3C=XQuery with Update Facility 3.0 (W3C Last Call Working Draft 19 February 2015)
 xquery.dialect.description.3.1/W3C=XQuery 3.1 (W3C Candidate Recommendation 17 December 2015)
 xquery.files.filetype.description=XQuery Language Support
+xquery.implementation.description.ml=MarkLogic
+xquery.implementation.description.w3c=W3C Standard
 xquery.settings.colors.bad.character=Invalid Character
 xquery.settings.colors.comment=Comment
 xquery.settings.colors.entity.reference=Entity Reference
@@ -18,8 +20,6 @@ xquery.settings.colors.number=Number
 xquery.settings.colors.string=String
 xquery.settings.project.default.version.label=Default XQuery version:
 xquery.settings.project.title=XQuery Project Settings
-xquery.vendor.description.ml=MarkLogic
-xquery.vendor.description.w3c=W3C Standard
 xquery.version.description.0.9-ml=MarkLogic 3.2 Compatibility XQuery Dialect
 xquery.version.description.1.0=W3C XQuery 1.0
 xquery.version.description.1.0-ml=MarkLogic XQuery Dialect
