Use 'W3C Specification' for the W3C implementation instead of 'W3C Standard'.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -10,7 +10,7 @@ xquery.dialect.description.3.0+update/W3C=XQuery with Update Facility 3.0 (W3C L
 xquery.dialect.description.3.1/W3C=XQuery 3.1 (W3C Candidate Recommendation 17 December 2015)
 xquery.files.filetype.description=XQuery Language Support
 xquery.implementation.description.ml=MarkLogic
-xquery.implementation.description.w3c=W3C Standard
+xquery.implementation.description.w3c=W3C Specification
 xquery.settings.colors.bad.character=Invalid Character
 xquery.settings.colors.comment=Comment
 xquery.settings.colors.entity.reference=Entity Reference
