--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -4,9 +4,11 @@ xquery.dialect.description.1.0-ml/6=MarkLogic 6
 xquery.dialect.description.1.0-ml/7=MarkLogic 7
 xquery.dialect.description.1.0-ml/8=MarkLogic 8
 xquery.dialect.description.1.0/W3C=XQuery 1.0 (W3C Recommendation 23 January 2007)
-xquery.dialect.description.1.0+update/W3C=XQuery with Update Facility 1.0 (W3C Recommendation 17 March 2011)
+xquery.dialect.description.1.0+full-text/W3C=XQuery and Full Text 1.0 (W3C Recommendation 17 March 2011)
+xquery.dialect.description.1.0+update/W3C=XQuery and Update Facility 1.0 (W3C Recommendation 17 March 2011)
 xquery.dialect.description.3.0/W3C=XQuery 3.0 (W3C Recommendation 08 April 2014)
-xquery.dialect.description.3.0+update/W3C=XQuery with Update Facility 3.0 (W3C Last Call Working Draft 19 February 2015)
+xquery.dialect.description.3.0+full-text/W3C=XQuery and Full Text 3.0 (W3C Recommendation 24 November 2015)
+xquery.dialect.description.3.0+update/W3C=XQuery and Update Facility 3.0 (W3C Last Call Working Draft 19 February 2015)
 xquery.dialect.description.3.1/W3C=XQuery 3.1 (W3C Candidate Recommendation 17 December 2015)
 xquery.files.filetype.description=XQuery Language Support
 xquery.implementation.description.ml=MarkLogic
