--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -21,6 +21,7 @@ xquery.settings.colors.identifier=Identifier
 xquery.settings.colors.number=Number
 xquery.settings.colors.string=String
 xquery.settings.project.default.version.label=Default XQuery version:
+xquery.settings.project.implementation.label=XQuery implementation:
 xquery.settings.project.title=XQuery Project Settings
 xquery.version.description.0.9-ml=MarkLogic 3.2 Compatibility XQuery Dialect
 xquery.version.description.1.0=W3C XQuery 1.0
