Add XQuery dialect selection to the language settings page.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -21,6 +21,10 @@ xquery.settings.colors.identifier=Identifier
 xquery.settings.colors.number=Number
 xquery.settings.colors.string=String
 xquery.settings.project.default.version.label=Default XQuery version:
+xquery.settings.project.dialect.1.0.label=XQuery 1.0 dialect:
+xquery.settings.project.dialect.3.0.label=XQuery 3.0 dialect:
+xquery.settings.project.dialect.3.1.label=XQuery 3.1 dialect:
+xquery.settings.project.dialect.marklogic.label=MarkLogic XQuery dialect:
 xquery.settings.project.implementation.label=XQuery implementation:
 xquery.settings.project.title=XQuery Project Settings
 xquery.version.description.0.9-ml=MarkLogic 3.2 Compatibility XQuery Dialect
