XQueryDialect: Split the name into a name and description for the W3C dialects.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -1,15 +1,22 @@
-xquery.dialect.description.0.9-ml/3.2=MarkLogic 3.2
-xquery.dialect.description.1.0-ml/5=MarkLogic 5
-xquery.dialect.description.1.0-ml/6=MarkLogic 6
-xquery.dialect.description.1.0-ml/7=MarkLogic 7
-xquery.dialect.description.1.0-ml/8=MarkLogic 8
-xquery.dialect.description.1.0/W3C=XQuery 1.0 (W3C Recommendation 23 January 2007)
-xquery.dialect.description.1.0+full-text/W3C=XQuery and Full Text 1.0 (W3C Recommendation 17 March 2011)
-xquery.dialect.description.1.0+update/W3C=XQuery and Update Facility 1.0 (W3C Recommendation 17 March 2011)
-xquery.dialect.description.3.0/W3C=XQuery 3.0 (W3C Recommendation 08 April 2014)
-xquery.dialect.description.3.0+full-text/W3C=XQuery and Full Text 3.0 (W3C Recommendation 24 November 2015)
-xquery.dialect.description.3.0+update/W3C=XQuery and Update Facility 3.0 (W3C Last Call Working Draft 19 February 2015)
-xquery.dialect.description.3.1/W3C=XQuery 3.1 (W3C Candidate Recommendation 17 December 2015)
+xquery.dialect.description.1.0/W3C=W3C Recommendation 23 January 2007
+xquery.dialect.description.1.0+full-text/W3C=W3C Recommendation 17 March 2011
+xquery.dialect.description.1.0+update/W3C=W3C Recommendation 17 March 2011
+xquery.dialect.description.3.0/W3C=W3C Recommendation 08 April 2014
+xquery.dialect.description.3.0+full-text/W3C=W3C Recommendation 24 November 2015
+xquery.dialect.description.3.0+update/W3C=W3C Last Call Working Draft 19 February 2015
+xquery.dialect.description.3.1/W3C=W3C Candidate Recommendation 17 December 2015
+xquery.dialect.name.0.9-ml/3.2=MarkLogic 3.2
+xquery.dialect.name.1.0-ml/5=MarkLogic 5
+xquery.dialect.name.1.0-ml/6=MarkLogic 6
+xquery.dialect.name.1.0-ml/7=MarkLogic 7
+xquery.dialect.name.1.0-ml/8=MarkLogic 8
+xquery.dialect.name.1.0/W3C=XQuery 1.0
+xquery.dialect.name.1.0+full-text/W3C=XQuery and Full Text 1.0
+xquery.dialect.name.1.0+update/W3C=XQuery and Update Facility 1.0
+xquery.dialect.name.3.0/W3C=XQuery 3.0
+xquery.dialect.name.3.0+full-text/W3C=XQuery and Full Text 3.0
+xquery.dialect.name.3.0+update/W3C=XQuery and Update Facility 3.0
+xquery.dialect.name.3.1/W3C=XQuery 3.1
 xquery.files.filetype.description=XQuery Language Support
 xquery.implementation.description.ml=MarkLogic
 xquery.implementation.description.w3c=W3C Specification
@@ -23,7 +30,6 @@ xquery.settings.colors.string=String
 xquery.settings.project.default.version.label=Default XQuery version:
 xquery.settings.project.dialect.1.0.label=XQuery 1.0 dialect:
 xquery.settings.project.dialect.3.0.label=XQuery 3.0 dialect:
-xquery.settings.project.dialect.3.1.label=XQuery 3.1 dialect:
 xquery.settings.project.dialect.marklogic.label=MarkLogic XQuery dialect:
 xquery.settings.project.implementation.label=XQuery implementation:
 xquery.settings.project.title=XQuery Project Settings
