--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -1,6 +1,8 @@
 xquery.dialect.description.1.0/W3C=W3C Recommendation 23 January 2007
 xquery.dialect.description.1.0/W3C-2ed=W3C Recommendation 14 December 2010
 xquery.dialect.description.1.0+full-text/W3C=W3C Recommendation 17 March 2011
+xquery.dialect.description.1.0+formal-semantics/W3C=W3C Recommendation 23 January 2007
+xquery.dialect.description.1.0+formal-semantics/W3C-2ed=W3C Recommendation 14 December 2010
 xquery.dialect.description.1.0+update/W3C=W3C Recommendation 17 March 2011
 xquery.dialect.description.3.0/W3C=W3C Recommendation 08 April 2014
 xquery.dialect.description.3.0+full-text/W3C=W3C Recommendation 24 November 2015
@@ -14,6 +16,8 @@ xquery.dialect.name.1.0-ml/8=MarkLogic 8
 xquery.dialect.name.1.0/W3C=XQuery 1.0
 xquery.dialect.name.1.0/W3C-2ed=XQuery 1.0 (Second Edition)
 xquery.dialect.name.1.0+full-text/W3C=XQuery and Full Text 1.0
+xquery.dialect.name.1.0+formal-semantics/W3C=XQuery and Formal Semantics 1.0
+xquery.dialect.name.1.0+formal-semantics/W3C-2ed=XQuery and Formal Semantics 1.0 (Second Edition)
 xquery.dialect.name.1.0+update/W3C=XQuery and Update Facility 1.0
 xquery.dialect.name.3.0/W3C=XQuery 3.0
 xquery.dialect.name.3.0+full-text/W3C=XQuery and Full Text 3.0
