Add the XQuery 1.0 WD 2003 May 02. This is the specification used by the 0.9-ml version.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -39,6 +39,8 @@ xquery.settings.project.dialect.3.0.label=XQuery 3.0 dialect:
 xquery.settings.project.dialect.marklogic.label=MarkLogic XQuery dialect:
 xquery.settings.project.implementation.label=XQuery implementation:
 xquery.settings.project.title=XQuery Project Settings
+xquery.specification.name.xquery-20030502=XQuery 1.0
+xquery.specification.description.xquery-20030502=W3C Working Draft 02 May 2003
 xquery.version.description.0.9-ml=MarkLogic 3.2 Compatibility XQuery Dialect
 xquery.version.description.1.0=W3C XQuery 1.0
 xquery.version.description.1.0-ml=MarkLogic XQuery Dialect
