Add an XQueryFeature enumeration to track XQuery conformance features.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -21,6 +21,17 @@ xquery.dialect.name.3.0/W3C=XQuery 3.0
 xquery.dialect.name.3.0+full-text/W3C=XQuery and Full Text 3.0
 xquery.dialect.name.3.0+update/W3C=XQuery and Update Facility 3.0
 xquery.dialect.name.3.1/W3C=XQuery 3.1
+xquery.feature.name.fn-put=fn:put Feature
+xquery.feature.name.full-axis=Full Axis Feature
+xquery.feature.name.higher-order-function=Higher Order Function Feature
+xquery.feature.name.minimal-conformance=Minimal Conformance
+xquery.feature.name.module=Module Feature
+xquery.feature.name.schema-aware=Schema Aware Feature
+xquery.feature.name.schema-import=Schema Import Feature
+xquery.feature.name.schema-validation=Schema Validation Feature
+xquery.feature.name.serialization=Serialization Feature
+xquery.feature.name.static-typing=Static Typing Feature
+xquery.feature.name.typed-data=Typed Data Feature
 xquery.files.filetype.description=XQuery Language Support
 xquery.implementation.description.ml=MarkLogic
 xquery.implementation.description.w3c=W3C Specification
