--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -1,23 +1,3 @@
-xquery.dialect.description.1.0/W3C=W3C Recommendation 23 January 2007
-xquery.dialect.description.1.0/W3C-2ed=W3C Recommendation 14 December 2010
-xquery.dialect.description.1.0+full-text/W3C=W3C Recommendation 17 March 2011
-xquery.dialect.description.1.0+formal-semantics/W3C=W3C Recommendation 23 January 2007
-xquery.dialect.description.1.0+formal-semantics/W3C-2ed=W3C Recommendation 14 December 2010
-xquery.dialect.description.1.0+update/W3C=W3C Recommendation 17 March 2011
-xquery.dialect.description.3.0/W3C=W3C Recommendation 08 April 2014
-xquery.dialect.description.3.0+full-text/W3C=W3C Recommendation 24 November 2015
-xquery.dialect.description.3.0+update/W3C=W3C Last Call Working Draft 19 February 2015
-xquery.dialect.description.3.1/W3C=W3C Candidate Recommendation 17 December 2015
-xquery.dialect.name.1.0/W3C=XQuery 1.0
-xquery.dialect.name.1.0/W3C-2ed=XQuery 1.0 (Second Edition)
-xquery.dialect.name.1.0+full-text/W3C=XQuery and Full Text 1.0
-xquery.dialect.name.1.0+formal-semantics/W3C=XQuery and Formal Semantics 1.0
-xquery.dialect.name.1.0+formal-semantics/W3C-2ed=XQuery and Formal Semantics 1.0 (Second Edition)
-xquery.dialect.name.1.0+update/W3C=XQuery and Update Facility 1.0
-xquery.dialect.name.3.0/W3C=XQuery 3.0
-xquery.dialect.name.3.0+full-text/W3C=XQuery and Full Text 3.0
-xquery.dialect.name.3.0+update/W3C=XQuery and Update Facility 3.0
-xquery.dialect.name.3.1/W3C=XQuery 3.1
 xquery.feature.name.fn-put=fn:put Feature
 xquery.feature.name.full-axis=Full Axis Feature
 xquery.feature.name.higher-order-function=Higher Order Function Feature
@@ -42,8 +22,28 @@ xquery.settings.colors.string=String
 xquery.settings.project.default.version.label=Default XQuery version:
 xquery.settings.project.implementation.label=XQuery implementation:
 xquery.settings.project.title=XQuery Project Settings
-xquery.specification.name.xquery-20030502=XQuery 1.0
+xquery.specification.description.xpath-full-text-10-20110317=W3C Recommendation 17 March 2011
+xquery.specification.description.xpath-full-text-30-20151124=W3C Recommendation 24 November 2015
 xquery.specification.description.xquery-20030502=W3C Working Draft 02 May 2003
+xquery.specification.description.xquery-20070123=W3C Recommendation 23 January 2007
+xquery.specification.description.xquery-20101214=W3C Recommendation 14 December 2010
+xquery.specification.description.xquery-30-20140408=W3C Recommendation 08 April 2014
+xquery.specification.description.xquery-31-20151217=W3C Candidate Recommendation 17 December 2015
+xquery.specification.description.xquery-semantics-20070123=W3C Recommendation 23 January 2007
+xquery.specification.description.xquery-semantics-20101214=W3C Recommendation 14 December 2010
+xquery.specification.description.xquery-update-10-20110317=W3C Recommendation 17 March 2011
+xquery.specification.description.xquery-update-30-20150219=W3C Last Call Working Draft 19 February 2015
+xquery.specification.name.xpath-full-text-10-20110317=XQuery and Full Text 1.0
+xquery.specification.name.xpath-full-text-30-20151124=XQuery and Full Text 3.0
+xquery.specification.name.xquery-20030502=XQuery 1.0
+xquery.specification.name.xquery-20070123=XQuery 1.0
+xquery.specification.name.xquery-20101214=XQuery 1.0 (Second Edition)
+xquery.specification.name.xquery-30-20140408=XQuery 3.0
+xquery.specification.name.xquery-31-20151217=XQuery 3.1
+xquery.specification.name.xquery-semantics-20070123=XQuery and Formal Semantics 1.0
+xquery.specification.name.xquery-semantics-20101214=XQuery and Formal Semantics 1.0 (Second Edition)
+xquery.specification.name.xquery-update-10-20110317=XQuery and Update Facility 1.0
+xquery.specification.name.xquery-update-30-20150219=XQuery and Update Facility 3.0
 xquery.version.description.0.9-ml=MarkLogic 3.2 Compatibility XQuery Dialect
 xquery.version.description.1.0=W3C XQuery 1.0
 xquery.version.description.1.0-ml=MarkLogic XQuery Dialect
