XQueryLexer: Implement XQuery 1.0 (A.1) [2] VersionDecl keywords and operators.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -17,6 +17,7 @@ xquery.settings.colors.comment=Comment
 xquery.settings.colors.entity.reference=Entity Reference
 xquery.settings.colors.escaped.character=Escaped Character
 xquery.settings.colors.identifier=Identifier
+xquery.settings.colors.keyword=Keyword
 xquery.settings.colors.number=Number
 xquery.settings.colors.string=String
 xquery.settings.project.default.version.label=Default XQuery version:
