XQueryParser: Implement XQuery 1.0 (A.2.1) [143] DoubleLiteral tokens.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -1,5 +1,6 @@
 parser.error.end-of-comment-without-start=End of XQuery comment marker found without a '(:' start of comment marker.
 parser.error.incomplete-comment=Unclosed XQuery comment.
+parser.error.incomplete-double-exponent=Incomplete double exponent.
 xquery.feature.name.fn-put=fn:put Feature
 xquery.feature.name.full-axis=Full Axis Feature
 xquery.feature.name.higher-order-function=Higher Order Function Feature
