--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -1,6 +1,7 @@
 parser.error.end-of-comment-without-start=End of XQuery comment marker found without a '(:' start of comment marker.
 parser.error.incomplete-comment=Unclosed XQuery comment.
 parser.error.incomplete-double-exponent=Incomplete double exponent.
+parser.error.incomplete-string=Unclosed string literal.
 xquery.feature.name.fn-put=fn:put Feature
 xquery.feature.name.full-axis=Full Axis Feature
 xquery.feature.name.higher-order-function=Higher Order Function Feature
