XQueryParser: Implement XQuery 1.0 (A.2.1) [145] PredefinedEntityRef.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -1,7 +1,9 @@
 parser.error.end-of-comment-without-start=End of XQuery comment marker found without a '(:' start of comment marker.
 parser.error.incomplete-comment=Unclosed XQuery comment.
 parser.error.incomplete-double-exponent=Incomplete double exponent.
+parser.error.incomplete-entity=Entity reference is not closed (missing ';').
 parser.error.incomplete-string=Unclosed string literal.
+parser.error.misplaced-entity=Entity references are not allowed here.
 xquery.feature.name.fn-put=fn:put Feature
 xquery.feature.name.full-axis=Full Axis Feature
 xquery.feature.name.higher-order-function=Higher Order Function Feature
