XQueryParser: Implement XQuery 1.0 (A.2.1) [154] QName.
XQueryLexer detection for QName prefices has been removed as it was
producing incorrect results for axes like `ancestor::`.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -4,6 +4,10 @@ parser.error.incomplete-double-exponent=Incomplete double exponent.
 parser.error.incomplete-entity=Entity reference is not closed (missing ';').
 parser.error.incomplete-string=Unclosed string literal.
 parser.error.misplaced-entity=Entity references are not allowed here.
+parser.error.qname.missing-local-name=Missing local name after ':' in qualified name.
+parser.error.qname.missing-prefix=Missing prefix before ':' in qualified name.
+parser.error.qname.whitespace-after-local-part=Whitespace is not allowed after ':' in a qualified name.
+parser.error.qname.whitespace-before-local-part=Whitespace is not allowed before ':' in a qualified name.
 xquery.feature.name.fn-put=fn:put Feature
 xquery.feature.name.full-axis=Full Axis Feature
 xquery.feature.name.higher-order-function=Higher Order Function Feature
