--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -1,3 +1,4 @@
+annotator.string-literal.unknown-xml-entity=Predefined entity ''{0}'' is not a valid XML entity.
 parser.error.end-of-comment-without-start=End of XQuery comment marker found without a '(:' start of comment marker.
 parser.error.incomplete-comment=Unclosed XQuery comment.
 parser.error.incomplete-double-exponent=Incomplete double exponent.
