XQueryStringLiteralAnnotator: Check against HTML5 entities and generate an error.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -1,4 +1,5 @@
 annotator.string-literal.html4-entity=HTML4 predefined entity ''{0}'' is not allowed in this XQuery version.
+annotator.string-literal.html5-entity=HTML5 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.unknown-xml-entity=Predefined entity ''{0}'' is not a known entity name.
 parser.error.end-of-comment-without-start=End of XQuery comment marker found without a '(:' start of comment marker.
 parser.error.incomplete-comment=Unclosed XQuery comment.
