--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -1,16 +1,16 @@
-annotator.string-literal.html4-entity=HTML4 predefined entity ''{0}'' is not allowed in this XQuery version.
-annotator.string-literal.html5-entity=HTML5 predefined entity ''{0}'' is not allowed in this XQuery version.
-annotator.string-literal.unknown-xml-entity=Predefined entity ''{0}'' is not a known entity name.
-parser.error.end-of-comment-without-start=End of XQuery comment marker found without a '(:' start of comment marker.
-parser.error.incomplete-comment=Unclosed XQuery comment.
-parser.error.incomplete-double-exponent=Incomplete double exponent.
-parser.error.incomplete-entity=Entity reference is not closed (missing ';').
-parser.error.incomplete-string=Unclosed string literal.
-parser.error.misplaced-entity=Entity references are not allowed here.
-parser.error.qname.missing-local-name=Missing local name after ':' in qualified name.
-parser.error.qname.missing-prefix=Missing prefix before ':' in qualified name.
-parser.error.qname.whitespace-after-local-part=Whitespace is not allowed after ':' in a qualified name.
-parser.error.qname.whitespace-before-local-part=Whitespace is not allowed before ':' in a qualified name.
+annotator.string-literal.html4-entity=XPST0003: HTML4 predefined entity ''{0}'' is not allowed in this XQuery version.
+annotator.string-literal.html5-entity=XPST0003: HTML5 predefined entity ''{0}'' is not allowed in this XQuery version.
+annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' is not a known entity name.
+parser.error.end-of-comment-without-start=XPST0003: End of XQuery comment marker found without a '(:' start of comment marker.
+parser.error.incomplete-comment=XPST0003: Unclosed XQuery comment.
+parser.error.incomplete-double-exponent=XPST0003: Incomplete double exponent.
+parser.error.incomplete-entity=XPST0003: Entity reference is not closed (missing ';').
+parser.error.incomplete-string=XPST0003: Unclosed string literal.
+parser.error.misplaced-entity=XPST0003: Entity references are not allowed here.
+parser.error.qname.missing-local-name=XPST0003: Missing local name after ':' in qualified name.
+parser.error.qname.missing-prefix=XPST0003: Missing prefix before ':' in qualified name.
+parser.error.qname.whitespace-after-local-part=XPST0003: Whitespace is not allowed after ':' in a qualified name.
+parser.error.qname.whitespace-before-local-part=XPST0003: Whitespace is not allowed before ':' in a qualified name.
 xquery.feature.name.fn-put=fn:put Feature
 xquery.feature.name.full-axis=Full Axis Feature
 xquery.feature.name.higher-order-function=Higher Order Function Feature
