Improve the error message on incomplete entity references.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -5,7 +5,7 @@ parser.error.empty-entity=XPST0003: Entity references must not be empty.
 parser.error.end-of-comment-without-start=XPST0003: End of XQuery comment marker found without a '(:' start of comment marker.
 parser.error.incomplete-comment=XPST0003: Unclosed XQuery comment.
 parser.error.incomplete-double-exponent=XPST0003: Incomplete double exponent.
-parser.error.incomplete-entity=XPST0003: Entity reference is not closed (missing ';').
+parser.error.incomplete-entity=XPST0003: Invalid entity reference character.
 parser.error.incomplete-string=XPST0003: Unclosed string literal.
 parser.error.misplaced-entity=XPST0003: Entity references are not allowed here.
 parser.error.qname.missing-local-name=XPST0003: Missing local name after ':' in qualified name.
