XQueryParser: Implement XQuery 1.0 (A.1) [103-104] DirCommentConstructor | DirCommentContents.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -2,12 +2,14 @@ annotator.string-literal.html4-entity=XPST0003: HTML4 predefined entity ''{0}'' 
 annotator.string-literal.html5-entity=XPST0003: HTML5 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' is not a known entity name.
 parser.error.empty-entity=XPST0003: Entity references must not be empty.
-parser.error.end-of-comment-without-start=XPST0003: End of XQuery comment marker found without a '(:' start of comment marker.
+parser.error.end-of-comment-without-start=XPST0003: End of comment marker found without a ''{0}'' start of comment marker.
 parser.error.incomplete-comment=XPST0003: Unclosed XQuery comment.
 parser.error.incomplete-double-exponent=XPST0003: Incomplete double exponent.
 parser.error.incomplete-entity=XPST0003: Invalid entity reference character.
 parser.error.incomplete-string=XPST0003: Unclosed string literal.
+parser.error.incomplete-xml-comment=XPST0003: Unclosed XML comment.
 parser.error.misplaced-entity=XPST0003: Entity references are not allowed here.
+parser.error.unrecognised-operator=XPST0003: Unrecognized operator.
 parser.error.qname.missing-local-name=XPST0003: Missing local name after ':' in qualified name.
 parser.error.qname.missing-prefix=XPST0003: Missing prefix before ':' in qualified name.
 parser.error.qname.whitespace-after-local-part=XPST0003: Whitespace is not allowed after ':' in a qualified name.
