--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -2,7 +2,9 @@ annotator.string-literal.html4-entity=XPST0003: HTML4 predefined entity ''{0}'' 
 annotator.string-literal.html5-entity=XPST0003: HTML5 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' is not a known entity name.
 parser.error.empty-entity=XPST0003: Entity references must not be empty.
+parser.error.end-of-cdata-section-without-start=XPST0003: End of CDATA section marker found without a '<![CDATA[' start of CDATA section marker.
 parser.error.end-of-comment-without-start=XPST0003: End of comment marker found without a ''{0}'' start of comment marker.
+parser.error.incomplete-cdata-section=XPST0003: Unclosed CDATA section.
 parser.error.incomplete-comment=XPST0003: Unclosed XQuery comment.
 parser.error.incomplete-double-exponent=XPST0003: Incomplete double exponent.
 parser.error.incomplete-entity=XPST0003: Invalid entity reference character.
