--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -2,6 +2,10 @@ annotator.string-literal.html4-entity=XPST0003: HTML4 predefined entity ''{0}'' 
 annotator.string-literal.html5-entity=XPST0003: HTML5 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' is not a known entity name.
 parser.error.empty-entity=XPST0003: Entity references must not be empty.
+parser.error.expected-encoding-string=XPST0003: Missing encoding string.
+parser.error.expected-keyword=XPST0003: Missing keyword ''{0}''.
+parser.error.expected-version-string=XPST0003: Missing version string.
+parser.error.expected-semicolon=XPST0003: Missing semicolon.
 parser.error.end-of-cdata-section-without-start=XPST0003: End of CDATA section marker found without a '<![CDATA[' start of CDATA section marker.
 parser.error.end-of-comment-without-start=XPST0003: End of comment marker found without a ''{0}'' start of comment marker.
 parser.error.incomplete-cdata-section=XPST0003: Unclosed CDATA section.
