Saxonica: Home Edition (implementation data)

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -34,6 +34,7 @@ xquery.feature.name.typed-data=Typed Data Feature
 xquery.files.filetype.description=XQuery Language Support
 xquery.implementation.description.ml=MarkLogic
 xquery.implementation.description.w3c=W3C Specification
+xquery.implementation.home-edition=Home Edition
 xquery.settings.colors.bad.character=Invalid Character
 xquery.settings.colors.comment=Comment
 xquery.settings.colors.entity.reference=Entity Reference
