Saxonica: Enterprise Edition (implementation data)

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -34,8 +34,10 @@ xquery.feature.name.typed-data=Typed Data Feature
 xquery.files.filetype.description=XQuery Language Support
 xquery.implementation.description.ml=MarkLogic
 xquery.implementation.description.w3c=W3C Specification
+xquery.implementation.enterprise-edition=Enterprise Edition
 xquery.implementation.home-edition=Home Edition
 xquery.implementation.professional-edition=Professional Edition
+xquery.implementation.xquery-update-10=XQuery with Update Facility 1.0
 xquery.settings.colors.bad.character=Invalid Character
 xquery.settings.colors.comment=Comment
 xquery.settings.colors.entity.reference=Entity Reference
