--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -34,10 +34,17 @@ xquery.feature.name.typed-data=Typed Data Feature
 xquery.files.filetype.description=XQuery Language Support
 xquery.implementation.description.ml=MarkLogic
 xquery.implementation.description.w3c=W3C Specification
+xquery.implementation.candidate-recommendation=Candidate Recommendation
 xquery.implementation.enterprise-edition=Enterprise Edition
 xquery.implementation.home-edition=Home Edition
+xquery.implementation.note=Note
 xquery.implementation.professional-edition=Professional Edition
-xquery.implementation.xquery-update-10=XQuery with Update Facility 1.0
+xquery.implementation.recommendation=Recommendation
+xquery.implementation.working-draft=Working Draft
+xquery.implementation.xquery-full-text-10=XQuery Full Text 1.0
+xquery.implementation.xquery-full-text-30=XQuery Full Text 3.0
+xquery.implementation.xquery-update-10=XQuery Update Facility 1.0
+xquery.implementation.xquery-update-30=XQuery Update Facility 3.0
 xquery.settings.colors.bad.character=Invalid Character
 xquery.settings.colors.comment=Comment
 xquery.settings.colors.entity.reference=Entity Reference
