Expose implementation versions to the settings page.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -41,6 +41,7 @@ xquery.settings.colors.keyword=Keyword
 xquery.settings.colors.number=Number
 xquery.settings.colors.string=String
 xquery.settings.project.implementation.label=Implementation:
+xquery.settings.project.implementation.version.label=Implementation version:
 xquery.settings.project.default.version.label=Default XQuery version:
 xquery.settings.project.title=XQuery Project Settings
 xquery.version.description.0.9-ml=MarkLogic 3.2 Compatibility XQuery Dialect
