--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -30,6 +30,7 @@ xquery.implementation.recommendation=Recommendation
 xquery.implementation.working-draft=Working Draft
 xquery.implementation.xquery-full-text-10=XQuery Full Text 1.0
 xquery.implementation.xquery-full-text-30=XQuery Full Text 3.0
+xquery.implementation.xquery-scripting-10=XQuery Scripting Extension 1.0
 xquery.implementation.xquery-update-10=XQuery Update Facility 1.0
 xquery.implementation.xquery-update-30=XQuery Update Facility 3.0
 xquery.settings.colors.bad.character=Invalid Character
