Add support for selecting the XQuery dialect for the different versions.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -44,6 +44,9 @@ xquery.settings.colors.string=String
 xquery.settings.project.implementation.label=Implementation:
 xquery.settings.project.implementation.version.label=Implementation version:
 xquery.settings.project.default.version.label=Default XQuery version:
+xquery.settings.project.dialect.1.0.label=Dialect for XQuery 1.0:
+xquery.settings.project.dialect.3.0.label=Dialect for XQuery 3.0:
+xquery.settings.project.dialect.3.1.label=Dialect for XQuery 3.1:
 xquery.settings.project.title=XQuery Project Settings
 xquery.version.description.0.9-ml=MarkLogic 3.2 Compatibility XQuery Dialect
 xquery.version.description.1.0=W3C XQuery 1.0
