Use the display name 'Not Supported' for the null ImplementationItem object.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -23,6 +23,7 @@ parser.error.invalid-token=XPST0003: Invalid XQuery symbol or operator.
 xquery.files.filetype.description=XQuery Language Support
 xquery.implementation.enterprise-edition=Enterprise Edition
 xquery.implementation.home-edition=Home Edition
+xquery.implementation.not-supported=Not Supported
 xquery.implementation.professional-edition=Professional Edition
 xquery.implementation.specification=Specification
 xquery.implementation.xquery-full-text-10=XQuery Full Text 1.0
