XQueryParser: Implement XQuery 1.0 (A.1) [5] ModuleDecl.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -2,10 +2,13 @@ annotator.string-literal.html4-entity=XPST0003: HTML4 predefined entity ''{0}'' 
 annotator.string-literal.html5-entity=XPST0003: HTML5 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' is not a known entity name.
 parser.error.empty-entity=XPST0003: Entity references must not be empty.
+parser.error.expected=XPST0003: Expected ''{0}''.
 parser.error.expected-encoding-string=XPST0003: Missing encoding string.
 parser.error.expected-keyword=XPST0003: Missing keyword ''{0}''.
-parser.error.expected-version-string=XPST0003: Missing version string.
+parser.error.expected-ncname=XPST0003: Missing identifier.
 parser.error.expected-semicolon=XPST0003: Missing semicolon.
+parser.error.expected-url-string=XPST0003: Missing URL string.
+parser.error.expected-version-string=XPST0003: Missing version string.
 parser.error.end-of-cdata-section-without-start=XPST0003: End of CDATA section marker found without a '<![CDATA[' start of CDATA section marker.
 parser.error.end-of-comment-without-start=XPST0003: End of comment marker found without a ''{0}'' start of comment marker.
 parser.error.incomplete-cdata-section=XPST0003: Unclosed CDATA section.
@@ -14,12 +17,12 @@ parser.error.incomplete-double-exponent=XPST0003: Incomplete double exponent.
 parser.error.incomplete-entity=XPST0003: Invalid entity reference character.
 parser.error.incomplete-string=XPST0003: Unclosed string literal.
 parser.error.incomplete-xml-comment=XPST0003: Unclosed XML comment.
+parser.error.invalid-token=XPST0003: Invalid XQuery symbol or operator.
 parser.error.misplaced-entity=XPST0003: Entity references are not allowed here.
 parser.error.qname.missing-local-name=XPST0003: Missing local name after ':' in qualified name.
 parser.error.qname.missing-prefix=XPST0003: Missing prefix before ':' in qualified name.
 parser.error.qname.whitespace-after-local-part=XPST0003: Whitespace is not allowed after ':' in a qualified name.
 parser.error.qname.whitespace-before-local-part=XPST0003: Whitespace is not allowed before ':' in a qualified name.
-parser.error.invalid-token=XPST0003: Invalid XQuery symbol or operator.
 xquery.files.filetype.description=XQuery Language Support
 xquery.implementation.enterprise-edition=Enterprise Edition
 xquery.implementation.home-edition=Home Edition
