XQueryParser: Implement XQuery 1.0 (A.1) [140] URILiteral.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -7,7 +7,7 @@ parser.error.expected-encoding-string=XPST0003: Missing encoding string.
 parser.error.expected-keyword=XPST0003: Missing keyword ''{0}''.
 parser.error.expected-ncname=XPST0003: Missing identifier.
 parser.error.expected-semicolon=XPST0003: Missing semicolon.
-parser.error.expected-url-string=XPST0003: Missing URL string.
+parser.error.expected-uri-string=XPST0003: Missing URI string.
 parser.error.expected-version-string=XPST0003: Missing version string.
 parser.error.end-of-cdata-section-without-start=XPST0003: End of CDATA section marker found without a '<![CDATA[' start of CDATA section marker.
 parser.error.end-of-comment-without-start=XPST0003: End of comment marker found without a ''{0}'' start of comment marker.
