--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -23,6 +23,7 @@ parser.error.qname.missing-local-name=XPST0003: Missing local name after ':' in 
 parser.error.qname.missing-prefix=XPST0003: Missing prefix before ':' in qualified name.
 parser.error.qname.whitespace-after-local-part=XPST0003: Whitespace is not allowed after ':' in a qualified name.
 parser.error.qname.whitespace-before-local-part=XPST0003: Whitespace is not allowed before ':' in a qualified name.
+parser.error.version-decl.3.0=XPST0003: Encoding-only xquery declarations require XQuery 3.0 or later.
 xquery.files.filetype.description=XQuery Language Support
 xquery.implementation.enterprise-edition=Enterprise Edition
 xquery.implementation.home-edition=Home Edition
