XQueryParserTest: Use resource data files for the VersionDecl tests.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 src/test/resources/tests/parser/xquery-1.0/*.txt text eol=lf
 src/test/resources/tests/parser/xquery-1.0/*.xq text eol=lf
+src/test/resources/tests/parser/xquery-3.0/*.txt text eol=lf
+src/test/resources/tests/parser/xquery-3.0/*.xq text eol=lf
