--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -6,6 +6,7 @@ parser.error.expected=XPST0003: Expected ''{0}''.
 parser.error.expected-encoding-string=XPST0003: Missing encoding string.
 parser.error.expected-keyword=XPST0003: Missing keyword ''{0}''.
 parser.error.expected-ncname=XPST0003: Missing identifier.
+parser.error.expected-query-body=XPST0003: Missing query body.
 parser.error.expected-semicolon=XPST0003: Missing semicolon.
 parser.error.expected-uri-string=XPST0003: Missing URI string.
 parser.error.expected-version-string=XPST0003: Missing version string.
