XQueryParser: Implement XQuery 1.0 (A.1) [13] OptionDecl.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -8,6 +8,8 @@ parser.error.expected-encoding-string=XPST0003: Missing encoding string.
 parser.error.expected-keyword=XPST0003: Missing keyword ''{0}''.
 parser.error.expected-module-type=XPST0003: Missing library 'module' declaration or main module query body.
 parser.error.expected-ncname=XPST0003: Missing identifier.
+parser.error.expected-option-string=XPST0003: Missing option value string.
+parser.error.expected-qname=XPST0003: Missing qualified name.
 parser.error.expected-query-body=XPST0003: Missing query body.
 parser.error.expected-semicolon=XPST0003: Missing semicolon.
 parser.error.expected-uri-string=XPST0003: Missing URI string.
