Explicitly suppress unused resource properties that are actually referenced in implementations.xml.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -1,4 +1,3 @@
-# suppress inspection "UnusedProperty" for whole file
 annotator.string-literal.html4-entity=XPST0003: HTML4 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.html5-entity=XPST0003: HTML5 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' is not a known entity name.
@@ -29,15 +28,24 @@ parser.error.qname.whitespace-after-local-part=XPST0003: Whitespace is not allow
 parser.error.qname.whitespace-before-local-part=XPST0003: Whitespace is not allowed before ':' in a qualified name.
 parser.error.version-decl.3.0=XPST0003: Encoding-only xquery declarations require XQuery 3.0 or later.
 xquery.files.filetype.description=XQuery Language Support
+# suppress inspection "UnusedProperty"
 xquery.implementation.enterprise-edition=Enterprise Edition
+# suppress inspection "UnusedProperty"
 xquery.implementation.home-edition=Home Edition
 xquery.implementation.not-supported=Not Supported
+# suppress inspection "UnusedProperty"
 xquery.implementation.professional-edition=Professional Edition
+# suppress inspection "UnusedProperty"
 xquery.implementation.specification=Specification
+# suppress inspection "UnusedProperty"
 xquery.implementation.xquery-full-text-10=XQuery Full Text 1.0
+# suppress inspection "UnusedProperty"
 xquery.implementation.xquery-full-text-30=XQuery Full Text 3.0
+# suppress inspection "UnusedProperty"
 xquery.implementation.xquery-scripting-10=XQuery Scripting Extension 1.0
+# suppress inspection "UnusedProperty"
 xquery.implementation.xquery-update-10=XQuery Update Facility 1.0
+# suppress inspection "UnusedProperty"
 xquery.implementation.xquery-update-30=XQuery Update Facility 3.0
 xquery.settings.colors.bad.character=Invalid Character
 xquery.settings.colors.comment=Comment
