--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -4,7 +4,7 @@ annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' 
 parser.error.empty-entity=XPST0003: Entity references must not be empty.
 parser.error.expected=XPST0003: Expected ''{0}''.
 parser.error.expected-encoding-string=XPST0003: Missing encoding string.
-parser.error.expected-keyword=XPST0003: Missing keyword ''{0}''.
+parser.error.expected-keyword=XPST0003: Expected keyword: {0}.
 parser.error.expected-module-type=XPST0003: Missing library 'module' declaration or main module query body.
 parser.error.expected-ncname=XPST0003: Missing identifier.
 parser.error.expected-option-string=XPST0003: Missing option value string.
