--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -4,6 +4,7 @@ annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' 
 parser.error.empty-entity=XPST0003: Entity references must not be empty.
 parser.error.expected=XPST0003: Expected ''{0}''.
 parser.error.expected-encoding-string=XPST0003: Missing encoding string.
+parser.error.expected-expression=XPST0003: Missing expression.
 parser.error.expected-keyword=XPST0003: Expected keyword: {0}.
 parser.error.expected-module-type=XPST0003: Missing library 'module' declaration or main module query body.
 parser.error.expected-ncname=XPST0003: Missing identifier.
@@ -11,6 +12,7 @@ parser.error.expected-option-string=XPST0003: Missing option value string.
 parser.error.expected-qname=XPST0003: Missing qualified name.
 parser.error.expected-query-body=XPST0003: Missing query body.
 parser.error.expected-uri-string=XPST0003: Missing URI string.
+parser.error.expected-variable-value=XPST0003: Missing ':=' variable assignment or 'external' keyword.
 parser.error.expected-version-string=XPST0003: Missing version string.
 parser.error.end-of-cdata-section-without-start=XPST0003: End of CDATA section marker found without a '<![CDATA[' start of CDATA section marker.
 parser.error.end-of-comment-without-start=XPST0003: End of comment marker found without a ''{0}'' start of comment marker.
