Use the QName parser to parse NCNames in order to improve error handling/recovery.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -8,6 +8,7 @@ parser.error.expected-expression=XPST0003: Missing expression.
 parser.error.expected-keyword=XPST0003: Expected keyword: {0}.
 parser.error.expected-module-type=XPST0003: Missing library 'module' declaration or main module query body.
 parser.error.expected-ncname=XPST0003: Missing identifier.
+parser.error.expected-ncname-not-qname=XPST0003: Expected an identifier not a qualified name.
 parser.error.expected-option-string=XPST0003: Missing option value string.
 parser.error.expected-qname=XPST0003: Missing qualified name.
 parser.error.expected-query-body=XPST0003: Missing query body.
