--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -12,6 +12,7 @@ parser.error.expected-ncname-not-qname=XPST0003: Expected an identifier not a qu
 parser.error.expected-option-string=XPST0003: Missing option value string.
 parser.error.expected-qname=XPST0003: Missing qualified name.
 parser.error.expected-query-body=XPST0003: Missing query body.
+parser.error.expected-qname-or-keyword=XPST0003: Missing qualified name or keyword: {0}.
 parser.error.expected-uri-string=XPST0003: Missing URI string.
 parser.error.expected-variable-value=XPST0003: Missing ':=' variable assignment or 'external' keyword.
 parser.error.expected-version-string=XPST0003: Missing version string.
