--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -3,6 +3,7 @@ annotator.string-literal.html5-entity=XPST0003: HTML5 predefined entity ''{0}'' 
 annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' is not a known entity name.
 parser.error.empty-entity=XPST0003: Entity references must not be empty.
 parser.error.expected=XPST0003: Expected ''{0}''.
+parser.error.expected-enclosed-expression-or-keyword=XPST0003: Missing enclosed expression start '''{''' or keyword: {0}.
 parser.error.expected-encoding-string=XPST0003: Missing encoding string.
 parser.error.expected-expression=XPST0003: Missing expression.
 parser.error.expected-keyword=XPST0003: Expected keyword: {0}.
