--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,10 @@ apply plugin: 'org.jetbrains.intellij'
 apply plugin: 'java'
 
 intellij {
-    version 'IC-2016.2' // IntelliJ IDEA dependency
+    def ideaVersion = System.getenv("IDEA_VERSION")
+    version = ideaVersion ? ideaVersion : 'IC-2016.2' // IntelliJ IDEA dependency
+    println "Building for IntelliJ version: ${version}"
+
     plugins 'coverage'  // Bundled plugin dependencies
     pluginName 'xquery'
 }
